@@ -1,3 +1,7 @@
+2006-04-11 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+	* Systematic review of enableFields and deleteClause in mod_web_dmail. Use BEfunc instead of pageSelect method.
+	* Recover extension constraints in ext_emconf.php.
+
 2006-04-07 Jan-Erik Revsbech <jer@moccompany.com>
 	* Fix Option includeMedia was not used when fetching direct mail. All mails were sent using absolute links.
 	
